syntax = "proto3";

package protos.game.session;

message ClientMessageGameSession {
  oneof message_type {
    PlayerJoin player_join = 1;
    PlayerJoin player_exit = 2;

  }
}

message PlayerJoin {
  int32 player_id = 1;
}

message PlayerExit {
    string player_id = 1;
  }
  
message ServerMessageGameSession {
  oneof message_type {
    PlayerSpawn player_spawn = 1;
    PlayerPosition PlayerPosition = 2;

  }
}

message PlayerPosition {
  int32 player_id = 1;
  float x = 2;  // Posici贸n X del jugador en el mapa
  float y = 3;  // Posici贸n Y del jugador en el mapa
}

message PlayerSpawn {
  int32 player_id = 1;
  //Informacion extra del MAP - COMPLETAR
  float x = 2;  // Posici贸n X del jugador en el mapa
  float y = 3;  // Posici贸n Y del jugador en el mapa
}

